# APIlogger

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md
.github/workflows/: ci.yml
checker/: Dockerfile  pyproject.toml
checker/app/: config.py  probe.py  reporter.py  worker.py
checker/tests/: test_idempotency_key.py  test_probe.py
coordinator/: Dockerfile  alembic.ini  pyproject.toml
coordinator/app/: main.py
coordinator/app/api/: deps.py
coordinator/app/api/v1/: auth.py  checks.py  health.py  incidents.py  services.py
coordinator/app/core/: config.py  logging.py  security.py
coordinator/app/db/: base.py  models.py
coordinator/app/db/migrations/: env.py
coordinator/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_ai_structured.py
coordinator/app/incidents/: ai_summary.py  alerting.py  detector.py
coordinator/app/queue/: consumer.py  producer.py
coordinator/app/scheduler/: scheduler.py
coordinator/tests/: conftest.py
coordinator/tests/eval/: test_ai_summary_accuracy.py
coordinator/tests/integration/: test_auth.py  test_node_death_recovery.py  test_services.py
coordinator/tests/unit/: test_detector.py  test_idempotency_key.py  test_security.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddServiceModal.tsx  IncidentTimeline.tsx  LatencyChart.tsx  StatusGrid.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: Dashboard.tsx  ServiceDetail.tsx
infra/: docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
load-tests/k6/: scenario.js
