[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apilogger-coordinator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.4",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "groq>=0.9.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
